==========================================
http://www.springframework.org/osgi

Changes in version 2.0.0 M2 (2010-mm-dd)
----------------------------------------

General
* upgraded to Felix 2.0.2
* upgraded to Knopflerfish 3.0.0.beta3
* upgraded to CGLib 2.2.0
* removed 'update-strategy' attribute (spring-osgi-compendium.xsd)
* improved timeout schema types to improve declaration validation
* added two extra attributes to 'cm-properties' element (spring-osgi-compendium.xsd)

Package org.springframework.osgi.bundle
* added sticky attribute to ServiceReference annotation

Package org.springframework.osgi.compendium
* improved configuration admin update handling by supporting both container and bean management on the same declaration
* introduced initialization timeout option to cm-properties
* introduced lazy initialization option to cm-properties

Package org.springframework.osgi.io
* improved pattern matching against jar entries in the bundle classpath
* fixed pattern matching against packages imported from bundles with custom classpaths

Package org.springframework.osgi.test
* added check for unresolved fragments during test startup

Package org.springframework.osgi.web
* added check to prevent deployed WARs from being redeployed (which can cause problems in some containers)
* serialized web bundles shutdown to prevent early bundle context invalidation


Changes in version 2.0.0 M1 (2009-09-28)
----------------------------------------

General
* JDK 5.0 required for both building and running; for JDK 1.4 support use 1.2.x branch
* upgraded to Spring Framework 3.0
* upgraded to Equinox 3.5.1
* upgraded to Knopflerfish 3.0.0.alfa1
* upgraded to Felix 1.8.1
* generified classes (both public and internal)
* updated archetype project to save locally the manifest generated during packaging
* aligned artifacts versioning with Spring Framework by uppercasing the qualifier (m1 becomes M1)
* added new elements to spring-osgi schema