@@ -11,7 +11,8 @@ General
 * upgraded to CGLib 2.2.0
 * removed 'update-strategy' attribute (spring-osgi-compendium.xsd)
 * improved timeout schema types to improve declaration validation
-* added two extra attributes to 'cm-properties' element (spring-osgi-compendium.xsd)
+* introduced two extra attributes to 'cm-properties' element (spring-osgi-compendium.xsd)
+* introduced service-properties to 'managed-service-factory' element (spring-osgi-compendium.xsd)
 
 Package org.springframework.osgi.bundle
 * added sticky attribute to ServiceReference annotation
@@ -20,6 +21,7 @@ Package org.springframework.osgi.compendium
 * improved configuration admin update handling by supporting both container and bean management on the same declaration
 * introduced initialization timeout option to cm-properties
 * introduced lazy initialization option to cm-properties
+* introduced service properties option to managed-service-factory
 
 Package org.springframework.osgi.io
 * improved pattern matching against jar entries in the bundle classpath
